# react-native-random-values-jsi-helper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-random-values-jsi-helper.podspec  tsconfig.json
.github/: FUNDING.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativerandomvaluesjsihelper/: RandomValuesJsiHelperModule.java  RandomValuesJsiHelperPackage.java
cpp/: TypedArray.cpp  TypedArray.hpp  react-native-random-values-jsi-helper.cpp
example/: app.json  index.tsx  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/debug/java/com/example/reactnativerandomvaluesjsihelper/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile
example/ios/RandomValuesJsiHelperExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/RandomValuesJsiHelperExample.xcodeproj/: project.pbxproj
example/ios/RandomValuesJsiHelperExample.xcodeproj/xcshareddata/xcschemes/: RandomValuesJsiHelperExample.xcscheme
example/ios/RandomValuesJsiHelperExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: RandomValuesJsiHelper.h  RandomValuesJsiHelper.mm
ios/RandomValuesJsiHelper.xcodeproj/: project.pbxproj
src/: index.tsx
(+2 files in other folders)
